# rust_diesel_mysql_demo

./: .env  Cargo.toml  README.md
migrations/2022-05-17-115652_create_plants/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
