[package]
name = "diesel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "list_plants"
path = "src/bin/list_plants.rc"

[dependencies]
diesel = { version = "1.4.4", features = ["mysql"] } 
dotenv = "0.15.0" 